fixes varios visuales

--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -9,7 +9,7 @@
       <!-- <p>Filtra por categorias: TODO</p> -->
       <h2>Lo más reciente</h2>
       <div class="container">
-        <div class="row">
+        <div class="row generalDiv">
           <!-- <div class="col-md-4 animate__animated animate__zoomIn" *ngFor="let product of products">
             <div class="thumb-wrapper">
               <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
