--- a/frontend/src/app/components/views/public/register/register.component.html
+++ b/frontend/src/app/components/views/public/register/register.component.html
@@ -5,22 +5,7 @@
   <div class="row pt-4 mt-lg-3 pb-5 mb-lg-4 mb-xl-5" id="form-elements">
     <div class="col-md-4">
       <h1 class="mb-md-4 h1 fc-3 fw-bold"><span class="fc-1">Regístrate</span></h1>
-      <p class="fs-11 pt-1 pb-4 mb-1 mb-lg-3 fc-6">We will be in touch in 3 days!</p>
-      <ul class="list-unstyled pb-2 pb-lg-4">
-        <li class="mb-3 mb-lg-4">
-          <span class="d-block fs-sm fc-6">Working Time</span>
-          <p class="pb-1 mb-2 fs-115r">Mon ~ Fri 9:00 ~ 18:00<br>Sat 9:00 ~ 12:00</p>
-        </li>
-        <li class="mb-3 mb-lg-4">
-          <span class="d-block fs-sm fc-6">Phone</span>
-          <a href="tel:0282263730" class="fc-2 fs-115r px-0">01-2345-6789</a>
-        </li>
-        <li class="mb-3 mb-lg-4">
-          <span class="d-block fs-sm fc-6">Location</span>
-          <div class="text-nav fs-115r fw-medium mb-1">Kuantan, Pahang, Malaysia</div>
-          <a href="#" class="fs-sm fc-link"><u>Google Map</u></a>
-        </li>
-      </ul>
+      <p class="fs-11 pt-1 pb-4 mb-1 mb-lg-3 fc-6">¡Únete a la plataforma líder en compra-venta!</p>
     </div>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit(); registerForm.reset();" class="col-xl-7 col-md-8 offset-xl-1 needs-validation" novalidate="" name="$ctrl.form" id="gform" method="post" action="">
       <!-- <input type="text" id="name" name="Name" class="form-control form-control-lg" required="" placeholder="" maxlength="60" [(ngModel)]="user.title" (ngModelChange)="test($event)"> -->
