--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -1,13 +1,13 @@
 <img class="wave" src="../../../../../assets/img/wave2.png">
 <div>
-  <carrouselComponent></carrouselComponent>
+  <carrouselComponent [products]="products"></carrouselComponent>
 
   
   <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
   <div class="generalDiv">
     <div class="divContentBox">
       <!-- <p>Filtra por categorias: TODO</p> -->
-      <h2>Lo más reciente</h2>
+      <h2><b>Todos</b></h2>
       <div class="container">
         <div class="row generalDiv">
           <!-- <div class="col-md-4 animate__animated animate__zoomIn" *ngFor="let product of products">
