--- a/frontend/src/app/components/views/public/productInfo/productInfo.component.html
+++ b/frontend/src/app/components/views/public/productInfo/productInfo.component.html
@@ -33,7 +33,7 @@
 							<!-- <span *ngIf="product.stock > 0" class="review-no">{{product.stock}} unidades disponibles</span> -->
 							<span *ngIf="product.stock > 0" class="badge badge-warning" style="background-color: #94CE32 !important;">{{product.stock}} unidades disponibles</span>
 							<span *ngIf="product.stock <= 0" class="badge badge-warning" style="background-color: #FFC107 !important;">No hay unidades disponibles</span>
-							&nbsp;<span *ngIf="product.offerPrice > 0" class="badge badge-warning" style="background-color: #94CE32 !important;">{{utilsService.calcularPorcentaje(product.price, product.offerPrice) | formatNumber}}% descuento</span>
+							&nbsp;<span *ngIf="product.offerPrice > 0" class="badge badge-warning" style="background-color: #94CE32 !important;">{{utilsService.calcularPorcentaje(product.price, product.offerPrice)}}% descuento</span>
 						</div>
 						<p class="product-description">{{product.description}}</p>
 						<h4 *ngIf="product.offerPrice === 0" class="price">Precio: <span>{{product.price | formatNumber}}</span></h4>
