implement token in sales

--- a/frontend/src/app/components/views/public/productInfo/productInfo.component.html
+++ b/frontend/src/app/components/views/public/productInfo/productInfo.component.html
@@ -1,5 +1,5 @@
 	
-	<div class="container" *ngIf="product">
+	<div class="container" style="margin-top: 200px;" *ngIf="product">
 		<div class="card">
 			<div class="container-fliud">
 				<div class="wrapper row">
