--- a/frontend/src/app/components/views/private/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/views/private/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
     <ul>
       <li><b>{{data.countUserProducts}} </b>Productos publicados</li>
       <li><b>{{data.salesCount}}</b> Ventas.</li>
-      <li>Producto más vendido: <b routerLink="/product-details/{{data.bestSeller.uid}}">{{data.bestSeller.title}}</b>.</li>
+      <li *ngIf="data.bestSeller">Producto más vendido: <b routerLink="/product-details/{{data.bestSeller.uid}}">{{data.bestSeller.title}}</b>.</li>
     </ul>
   </section>
 
