--- a/frontend/src/app/components/views/private/createProduct/createProduct.component.html
+++ b/frontend/src/app/components/views/private/createProduct/createProduct.component.html
@@ -33,16 +33,20 @@
             <label for="description" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-person-fill me-2"></i>Descripción</label>
             <textarea formControlName="description" [(ngModel)]="this.product.description" type="text" id="description" name="description" class="form-control form-control-lg" required="" placeholder=""></textarea>
           </div>
-          
+          <div class="col-sm-6 mb-4" style="margin-top: 50px;">
+            <uploadFilesComponent></uploadFilesComponent>
+            <img style="width: 100%;" src={{this.product.image}} onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
+      
+          </div>
        
         </div>  
         <button [disabled]="editProductForm.invalid" type="submit" class="btn btn-primary me-3" style="margin-top:30px; background-color: #69B190; border: none"><i class="fa-solid bi bi-send-fill me-2"></i>Guardar producto</button>
       </form>
      
-      <div class="col-sm-6 mb-4" style="margin-top: 50px;">
+      <!-- <div class="col-sm-6 mb-4" style="margin-top: 50px;">
         <uploadFilesComponent></uploadFilesComponent>
         <img style="width: 100%;" src={{this.product.image}} onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
-      </div>
+      </div> -->
     </section>
   </section>
 </main>
