--- a/frontend/src/app/components/views/private/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/views/private/dashboard/dashboard.component.html
@@ -16,9 +16,9 @@
   <section class="panel important">
     <h2>Bienvenido {{this.user.name}}</h2>
     <ul>
-      <li>Important panel that will always be really wide Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-      <li>Aliquam tincidunt mauris eu risus.</li>
-      <li>Vestibulum auctor dapibus neque.</li>
+      <li>Aquí podrás gestionar tus productos: edita, elimina o sube un producto.</li>
+      <li>Crea ofertas y aplícalas a tus productos.</li>
+      <li>Mantente informado con los datos que te representamos.</li>
     </ul>
   </section>
  
