revision public  pages  front

--- a/frontend/src/app/components/views/public/home/home.component.html
+++ b/frontend/src/app/components/views/public/home/home.component.html
@@ -2,7 +2,6 @@
 <div id="product-landing">
   <div id="nav">
     <div id="logo">
-      <!-- <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/habitual-branding.png" alt="Habitual branding logo."> -->
     </div>
   </div>
   <div id="hero">
@@ -17,34 +16,17 @@
             <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/App-Store-Web.png" alt="App Store Web button.">
           </a>
         </div>
-        <div id="google" class="hero-btn"><a href="">
+        <div id="google" class="hero-btn">
+          <a href="">
             <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Google-Play-Web.png" alt="Google Play button.">
           </a>
-
         </div>
       </div>
     </div>
     <div id="hero-visual" class="animate__animated animate__fadeInRight">
       <div id="hero-img">
-        <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/iPhone-15.png" alt="iPhone 15 display.">
+        <img src="../../../../../assets/img/phone.png">
       </div>
     </div>
   </div>
-  <!-- <div id="main">
-    <div class="main-img">
-      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Cart.png" alt="Cart visual.">
-    </div>
-    <div class="main-img">
-      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Orders.png" alt="Orders visual.">
-    </div>
-    <div class="main-img">
-      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Profile.png" alt="Profile visual.">
-    </div>
-    <div class="main-img">
-      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Product.png" alt="Product visual.">
-    </div>
-    <div class="main-img">
-      <img src="https://thehelpfultipper.github.io/build_figma_design/imgs/Home.png" alt="Home visual.">
-    </div>
-  </div> -->
 </div>
