--- a/frontend/src/app/components/views/public/404Page/pageNotFound.component.html
+++ b/frontend/src/app/components/views/public/404Page/pageNotFound.component.html
@@ -1,5 +1,5 @@
 <body>
-  <section class="notFound">
+  <section class="notFound" style="margin-bottom: -200px;">
       <div class="img">
       <img src="https://assets.codepen.io/5647096/backToTheHomepage.png" alt="Back to the Homepage"/>
       <img src="https://assets.codepen.io/5647096/Delorean.png" alt="El Delorean, El Doc y Marti McFly"/>
@@ -9,7 +9,7 @@
       <h2>PAGE NOT FOUND</h2>
       <h3>BACK TO HOME?</h3>
       <a routerLink="/" class="yes">YES</a>
-      <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo">NO</a>
+      <a href="https://www.youtube.com/watch?v=G3AfIvJBcGo" target="_blank">NO</a>
       </div>
   </section>
 </body>
