--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="#"><img style="width: 188px;" src="../../../assets/img/logo-separated.png" alt=""srcset=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <i class="fa fa-bars" style="color:#fff; font-size:28px;"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-md-auto gap-2">
