--- a/frontend/src/app/components/views/private/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/views/private/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 
 <main role="main" *ngIf="!data" class="animate__animated animate__fadeIn">
   <section class="panel important">
-    <h2>Bienvenido {{this.user.name}}</h2>
+    <h2>Bienvenid@ {{this.user.name}}</h2>
     <ul>
       <li>Para desbloquar este panel de gestión debes subir al menos un producto.</li>
       <li>Ve al apartado "Añadir Producto" y empieza hoy mismo.</li>
@@ -14,7 +14,7 @@
 
 <main role="main" *ngIf="data" class="animate__animated animate__fadeIn">
   <section class="panel important">
-    <h2>Bienvenido {{this.user.name}}</h2>
+    <h2>Bienvenid@ {{this.user.name}}</h2>
     <ul>
       <li>Aquí podrás gestionar tus productos: edita, elimina o sube un producto.</li>
       <li>Crea ofertas y aplícalas a tus productos.</li>
