--- a/frontend/src/app/components/views/public/home/home.component.html
+++ b/frontend/src/app/components/views/public/home/home.component.html
@@ -8,7 +8,7 @@
     <div id="hero-intro" class="animate__animated animate__fadeInLeft">
       <div id="hero-text">
         <h1>Compra y vende lo que quieras, cuando quieras.</h1>
-        <p>Aliquam rhoncus pretium dolor volutpat lectus odio non tellus neque. Aliquet et purus nibh bibendum integer etiam in enim nisi.</p>
+        <p>Pasa a formar parte de una comunidad de millones de personas que han descubierto una mejor forma de comprar, de compartir y de vivir.</p>
       </div>
       <div id="hero-action-btn">
         <div id="apple" class="hero-btn">
