--- a/frontend/src/app/components/graphics/navbar/navbar.component.html
+++ b/frontend/src/app/components/graphics/navbar/navbar.component.html
@@ -7,13 +7,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-md-auto gap-2">
-        <li class="nav-item rounded">
+        <li class="nav-item rounded mt-1">
           <a class="nav-link active" aria-current="page" routerLink="/"><i class="bi bi-house-fill me-2"></i>Inicio</a>
         </li>
-        <li class="nav-item rounded">
+        <li class="nav-item rounded mt-1">
           <a class="nav-link" routerLink="/marketplace"><i class="bi bi-people-fill me-2"></i>Mercado</a>
         </li>
-        <li class="nav-item rounded">
+        <li class="nav-item rounded mt-1">
           <a class="nav-link" routerLink="/product-support"><i class="bi bi-telephone-fill me-2"></i>Soporte</a>
         </li>
         <li class="nav-item rounded">
@@ -23,7 +23,7 @@
           </a>
         </li>        
         <li *ngIf="isLogged"  class="nav-item dropdown rounded">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle mt-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/dashboard">Cuenta</a></li>
@@ -36,7 +36,7 @@
           </ul>
         </li>
         <li *ngIf="!isLogged"  class="nav-item dropdown rounded">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle mt-1" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/login">Iniciar Sesión</a></li>
