--- a/frontend/src/app/components/views/public/cart/cart.component.html
+++ b/frontend/src/app/components/views/public/cart/cart.component.html
@@ -9,7 +9,7 @@
               <div class="col-lg-8">
                 <div class="p-5">
                   <div class="d-flex justify-content-between align-items-center mb-5">
-                    <h1 class="fw-bold mb-0 text-black">Shopping Cart</h1>
+                    <h1 class="fw-bold mb-0 text-black">Carrito</h1>
                     <h6 class="mb-0 text-muted">{{products.length}} productos</h6>
                   </div>
                   <hr class="my-4">
@@ -27,7 +27,7 @@
                         <b class=""><</b>
                       </button>
 
-                      <p id="product{{product.uid}}">{{product.units}}</p>
+                      <p id="product{{product.uid}}" class="m-3">{{product.units}}</p>
 
                       <button class="btn px-2"
                         (click)="this.sumUnits(product.uid, product.offerPrice > 0 ? product.offerPrice : product.price)">
@@ -47,13 +47,13 @@
 
                   <div class="pt-5">
                     <h6 class="mb-0"><a (click)="this.location.back()" class="text-body"><i
-                      class="fas fa-long-arrow-alt-left me-2"></i>Back to shop</a></h6>
+                      class="fas fa-long-arrow-alt-left me-2"></i>Volver al mercado</a></h6>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 bg-grey">
                 <div class="p-5">
-                  <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
+                  <h3 class="fw-bold mb-5 mt-2 pt-1">Resumen</h3>
                   <hr class="my-4">
 
                   <div *ngFor="let product of products" class="d-flex justify-content-between mb-4">
